unpackaged/main/default/objects/nbavs__CallFlow__c/nbavs__CallFlow__c.object-meta.xml
<CustomObject>
    <label>Routing Policy</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Routing Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>