unpackaged/main/default/objects/nbavs__CallFlow__c/fields/nbavs__Body2__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Body2__c</fullName>
    <label>Body2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>