unpackaged/main/default/objects/nbavs__CallFlow__c/fields/nbavs__Body3__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Body3__c</fullName>
    <label>Body3</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>