unpackaged/main/default/objects/nbavs__CallFlow__c/fields/nbavs__Body4__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Body4__c</fullName>
    <label>Body4</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>