unpackaged/main/default/objects/nbavs__CallFlow__c/fields/nbavs__PhoneNumbers__c.field-meta.xml
<CustomField>
    <fullName>nbavs__PhoneNumbers__c</fullName>
    <label>PhoneNumbers</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>