unpackaged/main/default/objects/nbavs__CallFlow__c/fields/nbavs__Policy2__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Policy2__c</fullName>
    <label>Policy2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>