unpackaged/main/default/objects/nbavs__CallFlow__c/fields/nbavs__Policy3__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Policy3__c</fullName>
    <label>Policy3</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>