unpackaged/main/default/objects/nbavs__CallFlow__c/fields/nbavs__Policy4__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Policy4__c</fullName>
    <label>Policy4</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>