unpackaged/main/default/objects/nbavs__CallFlow__c/fields/nbavs__Source__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>USER</fullName>
                <default>true</default>
                <label>USER</label>
            </value>
            <value>
                <fullName>SYSTEM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>