unpackaged/main/default/objects/nbavs__CallFlow__c/fields/nbavs__Status__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Enabled</fullName>
                <default>true</default>
                <label>Enabled</label>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>