unpackaged/main/default/objects/nbavs__CallFlow__c/fields/nbavs__Type__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>POLICY_TYPE_CALL</fullName>
                <default>true</default>
                <label>POLICY_TYPE_CALL</label>
            </value>
            <value>
                <fullName>POLICY_TYPE_DATA_ANALYTICS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>